<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="GOALS_ADD_GOAL">Add goal</string>
    <string name="GOALS_PAUSED">Paused</string>
    <string name="GOALS_COMPLETE">Completed</string>
    <string name="GOALS_RECURRENCE_FORMAT">%1$s/%2$s</string>
    <string name="GOALS_BY_DATE_FORMAT">by %s</string>
    <string name="GOALS_PROGRESS_FORMAT">%1$s of %2$s</string>
    <string name="GOALS_TOTAL_BALANCE">Total balance</string>
    <string name="GOALS_OF_WORD">of</string>
    <string name="GOALS_EMPTY_LIST_HEADER">Set money aside toward your goals.</string>
    <string name="GOALS_EMPTY_LIST_HEADER_SUBSTRING">goals.</string>
    <string name="GOALS_EMPTY_LIST_SUB_HEADER">Set money aside to cover the unexpected as well as fun things (like trips).</string>
    <string name="GOALS_ADD_HEADER_TITLE">What\'s the goal?</string>
    <string name="GOALS_ADD_HEADER_SUBTITLE">What are you setting money aside for?</string>
    <string name="GOALS_ADD_FOOTER">Funds will be deducted from your available balance and set aside in your Goal.</string>
    <string name="GOALS_ADD_GOAL_NAME_LABEL">Name</string>
    <string name="GOALS_ADD_AMOUNT_LABEL">Goal amount</string>
    <string name="GOALS_ADD_FREQUENCY_LABEL">Set-aside how often</string>
    <string name="GOALS_ADD_WEEKLY_LABEL">Day of the week</string>
    <string name="GOALS_ADD_WEEKLY_SELECTION_TITLE">Day of week</string>
    <string name="GOALS_ADD_MONTHLY_LABEL">Starting on</string>
    <string name="GOALS_ADD_FREQUENCY_SELECTION_TITLE">Set-aside how often?</string>
    <string name="GOALS_ADD_FREQUENCY_SELECTION_SUBTITLE">How often do you want to set money aside?</string>
    <string name="GOALS_ADD_COMPLETE_DATE_SELECTION_TITLE">Goal date</string>
    <string name="GOALS_ADD_COMPLETE_DATE_SELECTION_SUBTITLE">Want to meet your goal by a certain date?</string>
    <string name="GOALS_ADD_COMPLETE_DATE_YES">Yes</string>
    <string name="GOALS_ADD_COMPLETE_DATE_NO">No</string>
    <string name="GOALS_ADD_COMPLETE_DATE_HEADER">When do you need it?</string>
    <string name="GOALS_ADD_COMPLETE_DATE_SUB_HEADER">Choose your goal\'s end date.</string>
    <string name="GOALS_ADD_COMPLETE_DATE_CONFIRMATION_HEADER">Meet your goal on</string>
    <string name="GOALS_ADD_FREQUENCY_AMOUNT_LABEL">Amount</string>
    <string name="GOALS_ADD_FREQUENCY_AMOUNT_HEADER">How much can you set-aside?</string>
    <string name="GOALS_ADD_FREQUENCY_AMOUNT_SUB_HEADER_FORMAT">This amount will be set-aside %s.</string>
    <string name="GOALS_ADD_FREQUENCY_AMOUNT_CONFIRMATION_HEADER">Start setting aside</string>
    <string name="GOALS_ADD_CONFIRMATION_DESCRIPTION_FORMAT">Set money aside toward %s?</string>
    <string name="GOALS_NEXT_BUTTON">Next</string>
    <string name="GOAL_DETAIL_TRANSFER">Transfer in/out</string>
    <string name="GOAL_DETAIL_RECURRING_TRANSFER">Recurring transfer</string>
    <string name="GOAL_DETAIL_EDIT">Edit goal</string>
    <string name="GOAL_DETAIL_DELETE">Delete goal</string>
    <string name="GOAL_DETAIL_TRANSFER_BALANCE">Transfer balance</string>
    <string name="GOAL_DETAIL_FREQUENCY_AMOUNT_COMPLETE_DATE_FORMAT">%s/%s by %s</string>
    <string name="GOAL_DETAIL_GOAL_AMOUNT_FORMAT">of %s</string>
    <string name="GOAL_DELETE_TITLE">Delete goal</string>
    <string name="GOAL_DELETE_HEADER">You\'ll transfer</string>
    <string name="GOAL_DELETE_DESCRIPTION">back to your spending.\nWe\'ll then delete this goal.</string>
    <string name="GOAL_DELETE_BUTTON">Transfer &amp; delete</string>
    <string name="GOAL_DELETE_CANCEL">Cancel</string>
    <string name="GOAL_DELETE_ALERT_TITLE_FORMAT">Delete %s?</string>
    <string name="GOAL_DELETE_ALERT_MESSAGE_FORMAT">Are you sure you want to delete this goal?</string>
    <string name="GOAL_PAUSE_ALERT_TITLE">Continue?</string>
    <string name="GOAL_PAUSE_ALERT_MESSAGE_FORMAT">Are you sure you want to %s contributions to this goal?</string>
    <string name="GOAL_PAUSE">pause</string>
    <string name="GOAL_RESUME">resume</string>
    <string name="GOAL_ERROR_TITLE">This goal is past its end date</string>
    <string name="GOAL_ERROR_DESCRIPTION">To continue setting aside money in this goal, you must edit when you need it by. Tap to edit.</string>
    <string name="GOAL_SINGLE_TRANSFER_HEADER">Transfer money toward this goal or back to your available balance.</string>
    <string name="GOAL_SINGLE_TRANSFER_FROM_LABEL">From</string>
    <string name="GOAL_SINGLE_TRANSFER_TO_LABEL">To</string>
    <string name="GOAL_SINGLE_TRANSFER_AMOUNT_LABEL">How much</string>
    <string name="GOAL_SINGLE_TRANSFER_INSUFFICIENT_FUNDS_MESSAGE">There isn\'t sufficient funds in your balance to transfer to this goal.</string>
    <string name="GOAL_SINGLE_TRANSFER_FROM_SELECTION_TITLE">From account</string>
    <string name="GOAL_SINGLE_TRANSFER_FROM_SELECTION_DESCRIPTION">Please select the account you would like to transfer money from.</string>
    <string name="GOAL_SINGLE_TRANSFER_REMAINING_ERROR">Amount to transfer is larger than the remaining goal amount.</string>
    <string name="GOAL_SINGLE_TRANSFER_SPENDING_BALANCE_REMAINING_ERROR">Amount to transfer is larger than the remaining spending balance</string>
    <string name="GOAL_SINGLE_TRANSFER_CONFIRMATION_TOWARD_GOAL_FORMAT">toward %s</string>
    <string name="GOAL_SINGLE_TRANSFER_CONFIRMATION_TOWARD_GOAL_TEXT">Transfer this amount?</string>
    <string name="GOAL_SINGLE_TRANSFER_CONFIRMATION_TOWARD_BALANCE">back to available balance</string>
    <string name="GOAL_SINGLE_TRANSFER_CONFIRMATION_TOWARD_BALANCE_DESCRIPTION">Transferring this amount will affect the date that your goal is reached.</string>
    <string name="GOAL_SINGLE_TRANSFER_CONFIRMATION_BUTTON">Transfer</string>
    <string name="GOAL_SINGLE_TRANSFER_CONFIRMATION_GOAL_DELETE_SUBTITLE">If you choose not to delete your goal, we will keep it for you, however, it will be closed.</string>
    <string name="GOAL_SINGLE_TRANSFER_CONFIRMATION_GOAL_DELETE_YES">Yes, delete</string>
    <string name="GOAL_SINGLE_TRANSFER_CONFIRMATION_GOAL_DELETE_NO">No, keep this goal</string>
    <string name="GOAL_EDIT_FREQUENCY_AMOUNT">Set-aside how much</string>
    <string name="GOAL_EDIT_MONTHLY_DATE_LABEL">Next run date</string>
    <string name="GOAL_EDIT_COMPLETE_DATE_FOOTER">*Goals may complete earlier than your end date.</string>
    <string name="GOAL_EDIT_COMPLETE_DATE_LABEL">When do you need it by*</string>
    <string name="GOAL_EDIT_CONFIRMATION_COMPLETE_DATE_EFFECT_DESCRIPTION">This change will directly effect the date your goal will be reached.</string>
    <string name="GOAL_EDIT_CONFIRMATION_HEADER">You\'ll now set-aside</string>
    <string name="GOAL_EDIT_CONFIRMATION_RECURRENCE_WEEK_FORMAT">on %s</string>
    <string name="GOAL_EDIT_CONFIRMATION_GOAL_COMPLETE_DATE_FORMAT">until %s</string>
    <string name="GOAL_EDIT_CONFIRMATION_GOAL_COMPLETE_DATE_WEEKLY_FORMAT">on %s until %s</string>
    <string name="GOAL_EDIT_CONFIRMATION_RECURRENCE_MONTHLY_FORMAT">Starting on %s</string>
    <string name="GOAL_EDIT_CONFIRMATION_SAVE">Save</string>
</resources>