<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.engageft.feature.goals.GoalsAddStep2ViewModel"/>
        <variable
            name="palette"
            type="com.engageft.fis.pscu.feature.branding.Palette"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerTextView"
                style="@style/CreateTransferTitleTextStyle"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subHeaderTextView"
                style="@style/CreateGoalSubHeaderTextStyle"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cellBackground"
                android:orientation="vertical">

                <include layout="@layout/view_horizontal_divider" />

                <com.engageft.apptoolbox.view.DatePickerInputWithLabel
                    style="@style/BottomSheetListInputWithLabelStyle"
                    InputWithLabel.setThemeWithPalette="@{true}"
                    android:id="@+id/goalCompleteDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    app:labelText="@string/GOALS_ADD_COMPLETE_DATE_SELECTION_TITLE"
                    app:inputText="@={viewModel.goalCompleteByDate}"
                    app:bottomSheetDialogStyle="@style/ListOptionBottomSheetDialogFragmentStyle"/>

                <com.engageft.apptoolbox.view.CurrencyInputWithLabel
                    style="@style/CurrencyInputWithLabelStyle"
                    InputWithLabel.setThemeWithPalette="@{true}"
                    android:id="@+id/frequencyAmountInputWithLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    app:labelText="@string/GOALS_ADD_FREQUENCY_AMOUNT_LABEL"
                    app:inputText="@={viewModel.frequencyAmount}"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.engageft.apptoolbox.view.PillButton
                style="@style/ButtonPillPrimaryFilledDefault"
                PillButton.setThemeFilled="@{true}"
                android:id="@+id/nextButton"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:text="@string/GOALS_NEXT_BUTTON"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</layout>